RESOLVED FIXED152782
[mips] Fix bug in branchTruncateDoubleToUint32() implementation
https://bugs.webkit.org/show_bug.cgi?id=152782
Summary [mips] Fix bug in branchTruncateDoubleToUint32() implementation
Julien Brianceau
Reported 2016-01-06 02:57:49 PST
In mips macro assembler, the branchTruncateDoubleToUint32(FPRegisterID, RegisterID, BranchTruncateType) implementation is incorrect.
Attachments
Fix branchTruncateDoubleToUint32 mips implementation in macro assembler (1.44 KB, patch)
2016-01-06 03:00 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2016-01-06 03:00:09 PST
Created attachment 268364 [details] Fix branchTruncateDoubleToUint32 mips implementation in macro assembler Note: already contributed in qtwekbit http://code.qt.io/cgit/qt/qtwebkit.git/commit/?id=2d9ed318a21f6102dddc0b91de2698908a9b8efc
WebKit Commit Bot
Comment 2 2016-01-06 10:10:43 PST
Comment on attachment 268364 [details] Fix branchTruncateDoubleToUint32 mips implementation in macro assembler Clearing flags on attachment: 268364 Committed r194641: <http://trac.webkit.org/changeset/194641>
WebKit Commit Bot
Comment 3 2016-01-06 10:10:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.