[mips] Fix branchTruncateDoubleToUint32 implementation in macro assembler https://bugs.webkit.org/show_bug.cgi?id=152782

Patch by Julien Brianceau <jbriance@cisco.com> on 2016-01-06
Reviewed by Benjamin Poulain.

Already covered by LayoutTests/js/dfg-uint32array-overflow-values test.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::branchTruncateDoubleToUint32):

Canonical link: https://commits.webkit.org/170870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194641 268f45cc-cd09-0410-ab3c-d52691b4dbfc